refactor(plugin): fix and simplify UI creation in various effect KCMs

We don't need an intermediate widget class here, we can set up the UI directly,
like it's done in several effect KCMs already.

Not only does this simplify the code, it also fixes crashes due to broken
ownership.

BUG: 477020